--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="qr-container">
         <div class="qr-content">
             <img src="images/image-qr-code.png" alt="">
-            <h3>Imporve your front-end <br>skills by building projects</h3>
-            <p>Scan the QR code to visit Frotend<br>Mentor and take your coding skills to <br>next level</p>
+            <h3>Improve your front-end <br>skills by building projects</h3>
+            <p>Scan the QR code to visit Frotend<br>Mentor and take your coding skills to <br>the next level</p>
         </div>
     </div>
 </body>
